--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/c/CursoemVídeo">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://github.com/joaopedroandrade31">João Pedro Andrade</a> para o <a href="https://www.youtube.com/c/CursoemVídeo">CursoemVideo</a>.</p>
     </footer>
 </body>
 </html>
